--- a/css/styles.css
+++ b/css/styles.css
@@ -20,11 +20,17 @@ body {
   font-family: Roboto, sans-serif;
   letter-spacing: 0.03em;
 }
-ul {
-  list-style: none;
+
+.page-header {
+  background-color: palevioletred;
 }
+
 .logo {
+  margin-top: 0px;
+  margin-bottom: 0px;
+
   color: #000000;
+
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -37,6 +43,11 @@ ul {
 .logo:hover,
 .logo:focus {
   color: var(--accent-color);
+}
+.logo-words,
+.footer-words {
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 .contacts {
   font-weight: 500;
@@ -73,36 +84,93 @@ ul {
   color: var(--accent-color);
 }
 
+.list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
 /* hero */
 
+.hero {
+  text-align: center;
+  background-color: purple;
+}
 .hero-title {
+  margin-top: 0px;
+  margin-bottom: 40px;
+
   color: var(--title-text-color);
+
   letter-spacing: 0.06em;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
 }
 /* section */
 
+.section {
+  padding-bottom: 94px;
+  background-color: royalblue;
+}
+.section.one {
+  padding-top: 94px;
+}
+.no-padding {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
 .section-title {
+  margin-top: 0px;
+  margin-bottom: 50px;
+
   color: var(--title-text-color);
+
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
 }
+.section-link {
+  text-decoration: none;
+}
 
 /* feature */
 
+.feature-list .text {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
 .feature-list .title,
-.work-list .title {
+.team-list .title {
+  margin-top: 0px;
+  margin-bottom: 10px;
+}
+
+.feature-list .title {
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
 }
+.work-list .title {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding: 27px 85px 27px 86px;
+  width: 370px;
+  height: 70px;
 
+  background: rgba(47, 48, 58, 0.8);
+  color: var(--primary-white-color);
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+}
+.work-list .link {
+  text-decoration: none;
+}
 /* Exampls */
 
 /* Team */
@@ -112,6 +180,13 @@ ul {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
+}
+.profile {
+  text-decoration: none;
+}
+.position {
+  margin-top: 0px;
+  margin-bottom: 16px;
 }
 
 /* Footer */
@@ -148,7 +223,11 @@ ul {
   line-height: 1.14;
 }
 .developed {
+  margin-top: 0px;
+  margin-bottom: 0px;
+
   color: rgba(255, 255, 255, 0.4);
+
   font-weight: 400;
   font-size: 12px;
   line-height: 2;
@@ -156,6 +235,13 @@ ul {
 }
 
 /* Portfolio */
+
+.works {
+}
+.works-title {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
 
 .work-roster .title {
   color: var(--title-text-color);
@@ -165,6 +251,9 @@ ul {
   line-height: 2;
 }
 .work-roster .text {
+  margin-top: 0px;
+  margin-bottom: 0px;
+
   color: var(--primary-text-color);
   font-weight: 400;
   font-size: 16px;
@@ -174,15 +263,24 @@ ul {
 /* Button */
 
 .button {
+  display: inline-block;
+  border: 1px solid transparent;
+
   color: var(--title-text-color);
   background-color: var(--primary-white-color);
+
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.6;
   text-decoration: none;
+  text-align: center;
 }
 .button.primary {
+  padding: 6px 22px;
+  border-radius: 4px;
+  min-width: 73px;
+
   color: var(--title-text-color);
   background-color: var(--button-bg-color);
 }
@@ -192,10 +290,22 @@ ul {
   background-color: var(--accent-color);
 }
 .button.secondary {
+  border-radius: 4px;
+  padding: 10px 32px;
+  min-width: 200px;
+
   color: var(--primary-white-color);
   background-color: var(--accent-color);
+
   letter-spacing: 0.06em;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
+}
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+  outline: 2px solid salmon;
 }
