Добавляет text-transform: uppercase в .work-list .title

--- a/css/styles.css
+++ b/css/styles.css
@@ -164,6 +164,7 @@ body {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
+  text-transform: uppercase;
 }
 .title.one {
   padding: 27px 83px 27px 83px;
