--- a/css/styles.css
+++ b/css/styles.css
@@ -157,13 +157,13 @@ body {
   margin-bottom: 0px;
   width: 370px;
   height: 70px;
-
   background: rgba(47, 48, 58, 0.8);
   color: var(--primary-white-color);
 
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
+  text-align: center;
   text-transform: uppercase;
 }
 .title.one {
@@ -175,7 +175,6 @@ body {
 .title.three {
   padding: 27px 90px 27px 91px;
 }
-
 /* Exampls */
 
 /* Team */
