--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,11 @@ body {
 .page-header {
   background-color: palevioletred;
 }
-
+/* main-nav */
+.main-nav {
+  display: flex;
+  align-items: center;
+}
 .logo {
   margin-top: 0px;
   margin-bottom: 0px;
@@ -60,6 +64,10 @@ body {
   margin-left: 30px;
 }
 .contacts .link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+
   color: var(--primary-text-color);
   letter-spacing: 0.02em;
   text-decoration: none;
