--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,13 @@
   --footer-bg-color: #2f303a;
 }
 
+.list {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
 body {
   color: var(--primary-text-color);
   background-color: var(--primary-white-color);
@@ -29,7 +36,15 @@ body {
   display: flex;
   align-items: center;
 }
+/* nav */
+.nav {
+  display: flex;
+}
+
 .logo {
+  display: block;
+  padding-top: 24px;
+  padding-bottom: 25px;
   margin-top: 0px;
   margin-bottom: 0px;
 
@@ -55,6 +70,9 @@ body {
 }
 .contacts {
   display: flex;
+  padding: 0;
+  list-style: none;
+  margin-left: auto;
 
   font-weight: 500;
   font-size: 14px;
@@ -78,8 +96,13 @@ body {
 }
 /* site-nav */
 
+.nav .site-nav {
+  padding-left: 85px;
+}
+
 .site-nav {
   display: flex;
+
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -104,12 +127,6 @@ body {
 }
 .site-nav .link.current {
   color: var(--accent-color);
-}
-
-.list {
-  padding: 0;
-  margin: 0;
-  list-style: none;
 }
 
 /* hero */
@@ -156,6 +173,10 @@ body {
 
 /* feature */
 
+.feature-list {
+  display: flex;
+}
+
 .feature-list .text {
   margin-top: 0px;
   margin-bottom: 0px;
@@ -174,8 +195,17 @@ body {
   line-height: 1.14;
   text-transform: uppercase;
 }
-.work-list {
+.feature-list .element + .element {
+  margin-left: 30px;
+}
+.work-list,
+.team-list {
+  display: flex;
   width: 370px;
+}
+.work-list .element,
+.team-list .element + .element {
+  margin-left: 30px;
 }
 .work-list .title {
   margin-top: 0px;
@@ -201,6 +231,21 @@ body {
 }
 /* Exampls */
 
+.customers-title {
+  text-decoration: none;
+}
+
+.customers .examples {
+  width: 170px;
+  height: 90px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+}
+
+.customers .examples + .examples {
+  margin-left: 30px;
+}
+
 /* Team */
 
 .team-list .title {
@@ -208,16 +253,34 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
+  text-align: center;
 }
 .position {
   margin-top: 0px;
   margin-bottom: 16px;
+  text-align: center;
+}
+.list .network + .network {
+  margin-left: 10px;
+}
+.main-network {
+  padding: 0px 32px 24px 32px;
 }
 
 /* Footer */
 
+.main-footer {
+  padding-top: 48px;
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+}
+
 .footer {
   background-color: var(--footer-bg-color);
+}
+.footer-contacts {
+  display: flex;
 }
 .footer-logo {
   color: var(--primary-white-color);
@@ -241,6 +304,7 @@ body {
   list-style: none;
   margin-top: 0px;
   margin-bottom: 0px;
+  padding-left: 0;
 }
 .address-contact {
   color: rgba(255, 255, 255, 0.6);
@@ -249,6 +313,7 @@ body {
   line-height: 1.6;
   text-decoration: none;
 }
+
 .subscription {
   color: var(--primary-white-color);
   font-weight: 700;
@@ -263,6 +328,8 @@ body {
 .developed {
   margin-top: 0px;
   margin-bottom: 0px;
+  padding-top: 18px;
+  padding-bottom: 21px;
 
   color: rgba(255, 255, 255, 0.4);
 
@@ -270,9 +337,11 @@ body {
   font-size: 12px;
   line-height: 2;
   text-align: center;
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 /* Portfolio */
+
 .portfolio {
   text-decoration: none;
 }
@@ -284,7 +353,20 @@ body {
   margin-top: 0px;
   margin-bottom: 0px;
 }
-
+.work-roster {
+  flex-wrap: wrap;
+}
+.work-roster .item {
+  width: 370px;
+}
+/* 
+  border: 1px solid #eeeeee; */
+.work-roster .item:not(:nth-child(3n)) {
+  margin-right: 30px;
+}
+.work-roster .item:not(:nth-last-child(-n + 3)) {
+  margin-bottom: 30px;
+}
 .work-roster .title {
   padding-top: 20px;
   padding-bottom: 4px;
@@ -356,5 +438,4 @@ body {
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
-  outline: 2px solid salmon;
 }
