Добавляет .visually-hidden  и .hero-container

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,16 @@
   margin: 0;
   list-style: none;
 }
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0px;
+  padding: 0px;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 .img {
   display: block;
   max-width: 100%;
@@ -148,6 +158,10 @@ body {
 
 .hero {
   text-align: center;
+}
+.hero-container {
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 .hero-title {
   margin-top: 0px;
