--- a/css/styles.css
+++ b/css/styles.css
@@ -265,6 +265,9 @@ body {
 }
 
 .customers .examples {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 170px;
   height: 90px;
   border: 1px solid #afb1b8;
